--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
-@media (max-height: 689.98px) {
-  .mobile_menu_wrapper {
-    min-height: 690px !important;
-  }
+body {
+  overflow-x: hidden !important;
+  position: relative;
 }
+
 @media (max-width: 1644.98px) {
   .desktop_menu {
     display: none !important;
@@ -45,7 +45,7 @@
     position: relative;
   }
   .body_hide {
-    overflow: hidden !important;
+    display: none !important;
   }
   .right_0 {
     right: 0 !important;
@@ -68,6 +68,7 @@
     display: none !important;
   }
   .mobile_menu_wrapper {
+    min-height: 800px !important;
     padding-top: 17px !important;
     -webkit-transition: 0.5s;
     transition: 0.5s;
@@ -119,11 +120,6 @@
   .mobile_menu,
 .mobile_menu_wrapper {
     display: none !important;
-  }
-}
-@media (max-width: 449.98px) {
-  .links {
-    margin: 0 0 70px !important;
   }
 }
 @media (min-width: 320px) and (max-width: 575.98px) {
