--- a/css/_media.scss
+++ b/css/_media.scss
@@ -1,15 +1,16 @@
 // Наигация - настройка меню
 body{
-    overflow-x: hidden !important;
-    position: relative;
+    // overflow-x: hidden !important;
+    // position: relative;
 }
 
 
-// @media (max-height: 689.98px) {
-//    .mobile_menu_wrapper {
-//       min-height: 690px !important ;
-//    }
-// }
+@media (max-height: 689.98px) {
+   .mobile_menu_wrapper {
+    min-height: 800px !important;
+
+   }
+}
 @media (max-width: 1644.98px) {
    .desktop_menu {
       display: none !important;
@@ -65,7 +66,6 @@ body{
       }
    }
    .mobile_menu_wrapper {
-        min-height: 800px !important;
       padding-top: 17px !important;
       transition: 0.5s;
       position: absolute;
