--- a/css/main.scss
+++ b/css/main.scss
@@ -601,6 +601,15 @@ h1 {
    text-align: center;
    color: #ffffff;
 }
+.section_subtitle {
+   font-family: $font_400;
+   font-size: 25px;
+   line-height: 42px;
+   text-align: center;
+   color: #ffffff;
+   opacity: 0.5;
+}
+
 // ==================================
 // ==================================
 
@@ -631,15 +640,15 @@ h1 {
    background: #384d70;
    border-radius: 20px;
    transition: 0.5s;
-   &:hover{
-    transform: scale(1.1);
+   &:hover {
+      transform: scale(1.1);
    }
 }
 .card_item_img {
 }
 .card_item_title {
-    margin-top: 30px;
-    margin-bottom: 10px;
+   margin-top: 30px;
+   margin-bottom: 10px;
 
    font-family: $font_600;
    font-size: 35px;
@@ -669,7 +678,86 @@ h1 {
    margin: 30px auto;
 }
 .card_item_text3 {
-    margin: 30px auto 0;
- }
+   margin: 30px auto 0;
+}
+// ==================================
+// ==================================
+
+// ==================================
+// 4 Section
+// ==================================
+.play {
+   background: #101932;
+   padding-bottom: 175px;
+}
+.play_wrapper {
+   width: 100%;
+   max-width: 1736px;
+   margin: 50px auto 0;
+   padding: 0 15px;
+}
+.play_wrapper_col1 {
+   width: 100%;
+   background: #071022;
+   border-radius: 30px;
+   display: flex;
+   gap: 41px;
+   align-items: center;
+   padding: 36px 50px 60px;
+}
+
+.play_wrapper_col1_item_title {
+   margin-bottom: 20px;
+   font-family: $font_700;
+   font-size: 30px;
+   line-height: 36px;
+   display: flex;
+   align-items: center;
+   color: #ffffff;
+}
+.play_wrapper_col1_item2_text {
+   font-family: $font_400;
+   font-size: 24px;
+   line-height: 29px;
+   color: rgba(255, 255, 255, 0.6);
+}
+.play_wrapper_col1_item2_text_middle {
+   margin: 30px auto;
+}
+.play_wrapper_col2 {
+   width: 100%;
+   max-width: 1736px;
+   display: flex;
+   gap: 41px;
+   margin-top: 50px;
+   flex-wrap: wrap;
+   justify-content: center;
+}
+.play_wrapper_col2_item {
+   display: flex;
+   gap: 30px;
+   align-items: center;
+}
+.play_wrapper_col2_item1 {
+   background: #ff9429;
+   border-radius: 30px;
+   padding: 36px 64px 40px 30px;
+   max-height: 231px;
+   width: 100%;
+}
+.play_wrapper_col2_item2 {
+   background: #067ccb;
+   border-radius: 30px;
+   padding: 38px 38px 38px 30px;
+   max-height: 231px;
+   width: 100%;
+}
+.play_wrapper_col2_item2_info_text {
+   font-family: $font_400;
+   font-size: 28px;
+   line-height: 33px;
+   color: #ffffff;
+   opacity: 0.8;
+}
 // ==================================
 // ==================================
